Compass changed to compass

--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ Body Begins ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
   <body>
 
+<!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ Loader ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
+  <div class = "loader">
+      Loading ...
+  </div>
+
 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ Sidebar Navigation ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
     <aside>
       <ul class = "nav-pc">
