--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel = "icon" href = "Images/myAvatar.png" type = "image/x-icon/">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <link rel = "stylesheet" type = "text/css" href = "common.css">
     <link rel = "stylesheet" media="screen and (min-device-width: 800px)"  type = "text/css" href = "style.css">
     <link rel = "stylesheet" media="screen and (max-device-width: 799px)"  type = "text/css" href = "styleMobile.css">
-    <link rel = "stylesheet" type = "text/css" href = "common.css">
     <script src="script.js"></script>
   </head>
 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ Body Begins ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
@@ -16,7 +16,7 @@
 
 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ Loader ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
   <div class = "loader">
-      Loading ...
+      <div class = "loadText">Loading ...</div>
   </div>
 
 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ Sidebar Navigation ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
