Scroll button font size changed to 20px

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
         <br>
         <div class = "subContainer">
-            <img src = "Images/pencilSketch3.png">
+            <img src = "Images/myAvatar.png">
         </div>
         <h2 class = "subHeading" style = "z-index: 10;">
           &nbsp;&nbsp; <a onclick="scrollFunction('about')">I'm a Software Engineer</a>
